--- a/src/templates/auth/mascotas_add.html
+++ b/src/templates/auth/mascotas_add.html
@@ -32,7 +32,7 @@
         <div class="add">
             <span class="fs-4">Información del paciente </span>
             <div class="input-group input-group-sm mb-3">
-                <span class="input-group-text">Propietario</span>
+                <span class="input-group-text">Dueño</span>
                 <input type="search" class="form-control" placeholder="Nombre cliente" name="clientes">
             </div>
             <div class="input-group input-group-sm mb-3">
