--- a/src/templates/auth/clientes_info.html
+++ b/src/templates/auth/clientes_info.html
@@ -38,26 +38,26 @@
     <hr>
     <span class="input-group-text bg-success fw-bold text-white">Información de contacto</span>
     <div class="input-group input-group-sm mb-3 mt-3">
-      <label class="ms-5 text-success ">Telefono casa: &nbsp;</label>
+      <label class="text-success ">Telefono casa: &nbsp;</label>
       <p class="me-5 fw-bold">{{cliente.5}}</p>
-      <label class="text-success">Telefono móvil: &nbsp;</label>
+      <label class="ms-5 text-success">Telefono móvil: &nbsp;</label>
       <p class="fw-bold">{{cliente.6}}</p>
     </div>
     <div class="input-group input-group-sm mb-3 mt-3">
-      <label class="ms-5 text-success ">Telefono trabajo: &nbsp;</label>
+      <label class="text-success ">Telefono trabajo: &nbsp;</label>
       <p class="me-5 fw-bold">{{cliente.7}}</p>
-      <label class="text-success ">Correo: &nbsp;</label>
+      <label class="ms-5 text-success ">Correo: &nbsp;</label>
       <p class="fw-bold">{{cliente.8}}</p>
     </div>
     <div class="input-group input-group-sm mb-3">
-      <label class="ms-5 text-success ">Facebook: &nbsp;</label>
+      <label class="text-success ">Facebook: &nbsp;</label>
       <p class="me-5 fw-bold">{{cliente.9}}</p>
       <label class="text-success ">Derivado: &nbsp;</label>
       <p class="fw-bold">{{cliente.10}}</p>
     </div>
     <div class="input-group input-group-sm mb-3">
       <label class="text-success ">Dirección: &nbsp;</label>
-      <p class="ms-5 fw-bold">{{cliente.11}}</p>
+      <p class="fw-bold">{{cliente.11}}</p>
     </div>
     <div class="input-group input-group-sm mb-3">
       <label class="text-success ">Referencias: &nbsp;</label>
