--- a/src/templates/auth/mascotas_info.html
+++ b/src/templates/auth/mascotas_info.html
@@ -30,8 +30,10 @@
         <div class="input-group mb-3">
             <label class="text-success ">Nombre paciente: &nbsp;</label>
             <p class="me-5 fw-bold">{{mascota.2}}</p>
-            <label class="text-success ">Fecha nacimiento: &nbsp;</label>
-            <p class="me-5 fw-bold">{{mascota.3}}</p>
+            <label class="ms-5 text-success ">Fecha nacimiento: &nbsp;</label>
+            <p class="fw-bold">{{mascota.3}}</p>
+        </div>
+        <div class="input-group mb-3">
             <label class="text-success ">Microchip: &nbsp;</label>
             <p class=" fw-bold">{{mascota.4}}</p>
         </div>
