--- a/src/static/css/clientes.css
+++ b/src/static/css/clientes.css
@@ -42,6 +42,9 @@
     padding: 20px;
     width: 50%;
     margin-left: 25%;
+    border: 3px solid #55a27a;
+    margin-top: 20px;
+    border-radius: 20px;
   }
   
   .search {
