--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -1,10 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 
-* {
-  margin: 0;
-  padding: 0;
-}
-
 body {
   font-family: 'Open Sans', sans-serif;
   overflow-x: hidden;
@@ -105,6 +100,7 @@ body {
 @media (max-width: 1024px) {
   .sidebar {
     max-width: 270px;
+    z-index: 100;
   }
 }
 @media (max-width: 768px) {
@@ -119,11 +115,13 @@ body {
     width: 100%;
     max-width: 230px;
     transition: 0.2s linear;
+    z-index: 100;
   }
   .sidebar.is-active {
     left: 0;
   }
 }
+
 /* FOOTER */
 footer {
   background: #198754;
@@ -135,4 +133,38 @@ footer p {
 }
 #iconos .icono {
   color: #f3f3f3;
+}
+.accesos {
+  width: 90%;
+  padding: 20px;
+}
+.direct {
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+.direct_access {
+  width: 100px;
+  height: 100px;
+  font-size: 12px;
+  margin-left: 67px;
+}
+
+.updates {
+  list-style: none;
+}
+
+@media (max-width: 768px) {
+  .direct_access {
+    margin-bottom: 20px;
+    margin-left: 50px;
+  }
+}
+
+.info {
+  padding-left: 50px;
+  padding-top: 20px;
+}
+
+.info p a {
+  text-decoration: none;
 }
