--- a/src/templates/auth/mascotas_history.html
+++ b/src/templates/auth/mascotas_history.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='css/clientes.css') }}">
 {% endblock %}
 
-{% block title %} Mascotas | Perfil {% endblock %}
+{% block title %} Mascotas | Historial {% endblock %}
 
 {% block content %}
 <section class="content">
