--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -1,10 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 
-* {
-  margin: 0;
-  padding: 0;
-}
-
 body {
   font-family: 'Open Sans', sans-serif;
   overflow-x: hidden;
@@ -155,6 +150,7 @@ footer p {
 }
 
 .updates {
+  font-size: 17px;
   list-style: none;
 }
 
@@ -165,6 +161,10 @@ footer p {
   }
 }
 
+.titulos {
+  padding-top: 10px;
+}
+
 .info {
   padding-left: 50px;
   padding-top: 20px;
@@ -172,4 +172,63 @@ footer p {
 
 .info p a {
   text-decoration: none;
+}
+
+/* Estilos de clientes */
+@media (max-width: 991.98px) {
+  .offcanvas-collapse {
+    position: fixed;
+    top: 56px; /* Height of navbar */
+    bottom: 0;
+    left: 100%;
+    width: 100%;
+    padding-right: 1rem;
+    padding-left: 1rem;
+    overflow-y: auto;
+    visibility: hidden;
+    background-color: #343a40;
+    transition: transform .3s ease-in-out, visibility .3s ease-in-out;
+  }
+  .offcanvas-collapse.open {
+    visibility: visible;
+    transform: translateX(-100%);
+  }
+}
+
+.nav-scroller .nav-link {
+  padding-top: .75rem;
+  padding-bottom: .75rem;
+  font-size: .875rem;
+  color: #3f3f3f;
+}
+
+.nav-scroller .nav-link:hover {
+  color: #191C1F;
+}
+
+.nav-scroller .active {
+  font-weight: 500;
+  color: #55a27a;  
+}
+
+.add {
+  padding: 20px;
+}
+
+.perfil {
+  padding: 20px;
+  width: 50%;
+  margin-left: 25%;
+  border: 3px solid #55a27a;
+  margin-top: 20px;
+  border-radius: 20px;
+}
+
+.search {
+  padding: 20px;
+}
+
+.table {
+  font-size: 14px;
+  width: 100%;
 }
