--- a/src/templates/auth/adirectos.html
+++ b/src/templates/auth/adirectos.html
@@ -53,7 +53,7 @@
                     <li class="updates">Ventas</li>
                     <li class="updates">Hospitalización</li>
                     <li class="updates">Guardería</li>
-                    <li class="updates">Análisis de datos</li>
+                    <li class="updates">Análisis de datos y estadística</li>
                     <li class="updates">Gestión de jaulas</li>
                     <li class="updates">Manejo de inventario</li>
                     <li class="updates">Gestión de proveedores</li>
