--- a/src/templates/auth/mascotas_edit.html
+++ b/src/templates/auth/mascotas_edit.html
@@ -20,7 +20,7 @@
                 <a class="nav-link" href="/mascotas">Regresar</a>
                 <a class="nav-link" href="/perfil_pet/{{mascota.0}}">Perfil</a>
                 <a class="nav-link active" href="/edit_pet/{{mascota.0}}">Editar</a>
-                <a class="nav-link" href="#">Historial clinico</a>
+                <a class="nav-link" href="/historial/{{mascota.0}}">Historial clinico</a>
             </nav>
         </div>
     </div>
