--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css">
     <link rel="stylesheet" href="../static/css/main.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.2/main.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.2/main.min.js"></script>
     <!-- Custom CSS -->
     {% block customCSS %} {% endblock %}
 </head>
@@ -32,6 +34,44 @@
     </script>
     <!-- DATATABLES -->
     <script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+          var calendarEl = document.getElementById('calendar');
+          var calendar = new FullCalendar.Calendar(calendarEl, {
+        initialView: 'dayGridMonth',
+        initialDate: '2022-07-07',
+        headerToolbar: {
+        left: 'prev,next today',
+        center: 'title',
+        right: 'dayGridMonth,timeGridWeek,timeGridDay'
+    },
+    locale: 'es',
+    events: [
+      {
+        title: 'Cirugia Max',
+        start: '2022-07-01T12:30:00'
+      },
+      {
+        title: 'Consulta Kiara',
+        start: '2022-07-07T16:10',
+      },
+      {
+        title: 'Alta Max',
+        start: '2022-07-04T17:10',
+      },
+      {
+        title: 'Control Max',
+        start: '2022-07-07T17:10',
+      },
+      {
+        title: 'Consulta Chico',
+        start: '2022-07-16T16:00:00'
+      }
+    ]
+  });
+          calendar.render();
+        }); 
+    </script>
     <script>
         $(document).ready(function () {
             $('#tabla-clientes').DataTable({
