--- a/src/templates/auth/clientes_edit.html
+++ b/src/templates/auth/clientes_edit.html
@@ -68,7 +68,7 @@
         </div>
         <div class="input-group input-group-sm mb-3">
             <a href="/clientes" class="btn btn-danger btn-sm w-50">Cancelar</a>
-            <button type="submit" class="btn btn-primary btn-sm w-50">Guardar cambios</button>
+            <button type="submit" class="btn btn-primary btn-sm w-50">Actualizar</button>
         </div>
     </div>
   </form>
