--- a/src/templates/auth/mascotas_edit.html
+++ b/src/templates/auth/mascotas_edit.html
@@ -20,7 +20,6 @@
                 <a class="nav-link" href="/mascotas">Regresar</a>
                 <a class="nav-link" href="/perfil_pet/{{mascota.0}}">Perfil</a>
                 <a class="nav-link active" href="/edit_pet/{{mascota.0}}">Editar</a>
-                <a class="nav-link" href="/historial/{{mascota.0}}">Historial clinico</a>
             </nav>
         </div>
     </div>
@@ -77,7 +76,7 @@
             </div>
             <div class="input-group input-group-sm mb-3">
                 <a href="/mascotas" class="btn btn-danger btn-sm w-50">Cancelar</a>
-                <button type="submit" class="btn btn-primary btn-sm w-50">Guardar cambios</button>
+                <button type="submit" class="btn btn-primary btn-sm w-50">Actualizar</button>
             </div>
         </div>
     </form>
