--- a/src/templates/auth/servicios_edit.html
+++ b/src/templates/auth/servicios_edit.html
@@ -36,7 +36,7 @@
             </div>
             <div class="input-group input-group-sm mb-3">
                 <a href="/servicios" class="btn btn-danger btn-sm w-50">Cancelar</a>
-                <button type="submit" class="btn btn-primary btn-sm w-50">Guardar cambios</button>
+                <button type="submit" class="btn btn-primary btn-sm w-50">Actualizar</button>
             </div>
             
         </div>
